[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Moving_Entity.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Base_Enemy.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Enem_healto_system.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Attack/Enemy_attack_system.gd" type="Script" id=4]
[ext_resource path="res://Sprites/basic_enemy.png" type="Texture" id=5]

[node name="Base_Enemy" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Healto System" parent="." index="0"]
script = ExtResource( 3 )

[node name="Attaku System" parent="." index="1"]
script = ExtResource( 4 )

[node name="RayCast2DUp" type="RayCast2D" parent="." index="4"]
enabled = true
cast_to = Vector2( 0, -50 )

[node name="RayCast2DDown" type="RayCast2D" parent="." index="5"]
enabled = true

[node name="RayCast2DLeft" type="RayCast2D" parent="." index="6"]
enabled = true
cast_to = Vector2( -50, 0 )

[node name="RayCast2DRight" type="RayCast2D" parent="." index="7"]
enabled = true
cast_to = Vector2( 50, 0 )

[node name="Supuraitu" parent="." index="8"]
position = Vector2( 8.88178e-014, -1.70677e-006 )
scale = Vector2( 1.36957, 1.36957 )
texture = ExtResource( 5 )
